--- a/kadai_010/crud/templates/crud/product_detail.html
+++ b/kadai_010/crud/templates/crud/product_detail.html
@@ -1,10 +1,11 @@
-{% extends "product_list.html" %}
+{% extends "base.html" %}
 {% load bootstrap %}
 
 {% block title %}商品詳細{% endblock %}
 {% block content %}
- <h1>商品詳細</h1>
- <table border="1">
+<h1>商品詳細</h1>
+
+<table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
             <th>商品名</th>
@@ -12,10 +13,12 @@
         </tr>
     </thead>
     {% for product in object_list %}
-<tr>
-    <td>{{ product_detail.name }}</td>
-    <td>{{ product_detail.price }} 円</td>        
-</tr>
-{% endfor %}
+    <tr>
+        <td>{{ product.name }}</td>
+        <td>{{ product.price }} 円</td>
+    <br>
+    <a href="{% url 'list' %}">戻る</a>
+    </tr>
+    {% endfor %}
 </table>
 {% endblock %}
