--- a/kadai_010/crud/templates/crud/product_detail.html
+++ b/kadai_010/crud/templates/crud/product_detail.html
@@ -4,7 +4,6 @@
 {% block title %}商品詳細{% endblock %}
 {% block content %}
 <h1>商品詳細</h1>
-
 <table class="table table-striped table-hover table-bordered">
     <thead>
         <tr>
@@ -12,13 +11,11 @@
             <th>価格</th>
         </tr>
     </thead>
-    {% for product in object_list %}
     <tr>
-        <td>{{ product.name }}</td>
-        <td>{{ product.price }} 円</td>
-    <br>
-    <a href="{% url 'list' %}">戻る</a>
-    </tr>
-    {% endfor %}
+        <td>{{ product_detail.name }}</td>
+        <td>{{ product_detail.price }} 円</td>
+    <br>   
+    </tr>   
 </table>
+<a href="{% url 'list' %}">戻る</a>
 {% endblock %}
